# mcpPaylocity

./: .gitignore  Dockerfile  README.md  pyproject.toml  smithery.yaml
src/mcppaylocity/: __init__.py  __main__.py  paylocity_client.py  token_manager.py
src/mcppaylocity/access_token/: .gitkeep
